src/test/contracts/negative/not_comparable.mligo
let main (_u : (int set) set) (s : unit) : operation list * unit = ([] : operation list), s

let main2 (_u : (int set) ticket) (s : unit) : operation list * unit = ([] : operation list), s
